--- a/style.css
+++ b/style.css
@@ -12,12 +12,11 @@
 }
 .lado-derecho{
     width: 65%;
-    background-color: blue;
+    background-color: green;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: flex-end;
-
 }
 .lado-izquierdo-arriba{
     height: 45%;
@@ -33,7 +32,7 @@
 .lado-izquierdo-rojo{
     width: 90%;
     height: 90%;
-    background-color: red;
+    background-color: pink;
 }
 .lado-derecho-arriba{
     width: 90%;
